# tree-sitter-riot-v3

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README.md  binding.gyp  flake.nix  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml  fuzz.yml  lint.yml
bindings/c/: tree-sitter-riot-v3.h  tree-sitter-riot-v3.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_html/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterHTMLTests/: TreeSitterHTMLTests.swift
examples/: basic.tag
queries/riot_v3/: folds.scm  highlights.scm  indents.scm  injections.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: main.txt
