[package]
name = "tree-sitter-riot-v3"
description = "Riot.js v3 grammar for tree-sitter"
version = "0.1.0"
authors = [
  "duza11",
]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "riot", "riotjs"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/duza11/tree-sitter-riot-v3"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["LICENSE", "bindings/rust/*", "grammar.js", "queries/riot_v3/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1"

[dev-dependencies]
tree-sitter = "0.24"
